<resources>

    <string name="app_name">BinCardApp</string>
    <string name="bin">Введите BIN</string>
    <string name="search_history">История поиска</string>
    <string name="information_search">Поиск</string>

    <string name="base_info">Базовая информация</string>
    <string name="scheme_network">scheme/network:</string>
    <string name="type">type:</string>
    <string name="brand">brand:</string>
    <string name="prepaid">prepaid:</string>

    <string name="card_number">Номер карты</string>
    <string name="length">length:</string>
    <string name="luhn">luhn:</string>

    <string name="country">Страна</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>

    <string name="bank">Банк</string>

</resources>